@@ -299,8 +299,8 @@ public class ConnectionHandlerMonitoringPanel extends StatusGenericPanel
               int compare = 0;
               if (desc1.getAddresses().equals(desc2.getAddresses()))
               {
-                Integer port1 = new Integer(desc1.getPort());
-                Integer port2 = new Integer(desc2.getPort());
+                Integer port1 = Integer.valueOf(desc1.getPort());
+                Integer port2 = Integer.valueOf(desc2.getPort());
                 compare = port1.compareTo(port2);
               }
               else
